Contrast ratio issues fixed

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -370,7 +370,7 @@ textarea::placeholder {
 
   padding: 10px;
   margin: 14px 10px 10px 10px;
-  background-color: var(--secondary);
+  background-color: var(--primary);
   margin-top: 48%;
   min-width: 396px;
 }
@@ -378,7 +378,7 @@ textarea::placeholder {
 .spotlight h2 {
   text-align: center;
   margin: 20px 0;
-  color: #000000;
+  color: cornsilk;
   font-size: 26px;
   font-weight: bold;
 }
@@ -386,7 +386,7 @@ textarea::placeholder {
 .spotlight p {
   margin-bottom: 20px;
   font-size: 19px;
-  color: #fffffffa;
+  color: snow;
   font-weight: 400;
   line-height: 2;
 }
